# autotests_dispensense

./: README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
pages/: base_page.py  device_page.py  employee_page.py  login_page.py  pharmacy_group_page.py  pharmacy_page.py  role_page.py  tenant_page.py  test_pharmacies.py  workstation_page.py
tests/: test_devices.py  test_employees.py  test_login_roles.py  test_permissions.py  test_pharmacies.py  test_pharmacy_groups.py  test_tenant.py
utils/: config.py  driver_factory.py
